monticore-generator/src/test/resources/cocos/invalid/A2008/A2008a.mc4

/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2008;

grammar A2008a {

    A = "a";
    B = as:A* A*;
}